--- a/P_01/config.properties
+++ b/P_01/config.properties
@@ -2,26 +2,17 @@ url=https://devapp.prompto.com/en/login
 username=nishma+01@qaoncloud.com
 password=test@123
 browser=chrome
-amount1=0.45
-amount2=1.40
-type=ETH
-orgiAdd=uxi111110
-orgiAdd2=uxi222229
-orgiAdd3=uxi313338
-orgiAdd4=uxi424447
-orgiAdd5=uxi515556
-orgiAdd6=uxi626665
-basicOrgiAdd=uxi4117774
-basicOrgiAdd2=uxi3218883
-basicOrgiAdd3=uxi2319992
-basicOrgiAdd4=uxi1210001
-beneAdd=uxi6111110
-beneAdd2=uxi5112229
-beneAdd3=uxi41213338
-beneAdd4=uxi3114447
-beneAdd5=uxi2115556
-beneAdd6=uxi11116765
-basicBeneAdd=uxi1117674
-basicBeneAdd2=uxi22918883
-basicBeneAdd3=uxi330919992
-basicBeneAdd4=uxi441010001
+projectname=20/01
+firstname=TestProject
+lastname=002
+color=d11b69
+fieldname=testbest
+fieldinstruction=yyyy
+uspheadline=testone
+usptextbox=yyyy
+unittypename=testtwo
+mediatextbox=Selenium Automation
+medianotepad=ENTER
+uspheadline=uspheadline1
+usptextbox=usptextbox1
+tourcode=EOE29
