--- a/P_01/config.properties
+++ b/P_01/config.properties
@@ -1,8 +1,8 @@
-url=https://devapp.prompto.com/en/login
+url=https://devapp.prompto.com/en/projects
 username=nishma+01@qaoncloud.com
 password=test@123
 browser=chrome
-projectname=20/01
+projectname=Demo Project
 firstname=TestProject
 lastname=002
 color=d11b69
@@ -16,3 +16,4 @@ medianotepad=ENTER
 uspheadline=uspheadline1
 usptextbox=usptextbox1
 tourcode=EOE29
+searchproject=pdf test
