--- a/P_01/pom.xml
+++ b/P_01/pom.xml
@@ -42,6 +42,14 @@
     <version>5.3.1</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+<dependency>
+    <groupId>tech.grasshopper</groupId>
+    <artifactId>extentreports-cucumber7-adapter</artifactId>
+    <version>1.9.2</version>
+</dependency>
+
+
 
   
   
